# ShellgeiOnlineJudge

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  create_backend_data.bash  deploy_ShellgeiOnlineJudge.bash  docker-compose.yml  dot_env  pyproject.toml  setup.md
.github/workflows/: fastapi_ci.yaml  react_ci.yaml
backend/: Dockerfile  README.md  connection.php  judge.py  main.py  requirements.txt  run_shellgei.py
backend/api/: api_shellgei.py
backend/models/: model_db.py  model_shellgei.py
backend/scripts/: container_manager.py  database.py  judge.py  log_manager.py  run_shellgei.py  test.py  time_manager.py
client/: README.md
client/css/: style.css
client/html/: index.en.html  index.html
client/js/: index.js
client/scripts/: generate_index_html.py
client/soj-react-pkg/: .prettierrc.cjs  eslint.config.js  package.json
data/: README.md
data/answer/: EXERCISE-awk-01.txt  EXERCISE-awk-03.txt  EXERCISE-awk-05.txt  EXERCISE-cat-01.txt  EXERCISE-cat-04.txt  EXERCISE-find-01.txt  EXERCISE-find-02.txt  EXERCISE-find-03.txt  EXERCISE-sed-01.txt  EXERCISE-sed-02.txt  EXERCISE-sed-03.txt  EXERCISE-sed-04.txt  EXERCISE-sed-05.txt  EXERCISE-sed-06.txt  EXERCISE-sort-01.txt  EXERCISE-wc-01.txt  EXERCISE-wc-02.txt  GENERAL-00000004.txt  GENERAL-00000006.txt  GENERAL-00000007.txt  (+22 more)
deploy/: README.md  deploy.bash  maintenance.md  setup.md  test.py
docs/: maintenance.md  setup.md
frontend/: .prettierrc.cjs  Dockerfile  README.md  package.json
problems/: README.md
scripts/: deploy.bash  test.py
server/: connection.php  judge.py
(+341 files in other folders)
