[tool.poetry]
name = "ShellgeiOnlineJudge"
version = "2.2.0"
description = "Shellgei Online Judge"
authors = ["YusukeKato"]
license = "Apache 2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = "backend"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
gunicorn = "^23.0.0"
docker = "^7.1.0"
pytz = "^2025.2"
pydantic = "^2.11.7"
pytest = "^8.4.2"
ruff = "^0.12.12"
mypy = "^1.17.1"
types-requests = "^2.32.4.20250809"
types-docker = "^7.1.0.20250822"
types-pytz = "^2025.2.0.20250809"

[tool.mypy]
mypy_path = "backend"
namespace_packages = true
explicit_package_bases = true